--- a/TimeGlide.uproject
+++ b/TimeGlide.uproject
@@ -2,5 +2,11 @@
 	"FileVersion": 3,
 	"EngineAssociation": "{0004152A-08DA-92B2-4A3B-188A09AF6C3A}",
 	"Category": "",
-	"Description": ""
+	"Description": "",
+	"Plugins": [
+		{
+			"Name": "ControlRig",
+			"Enabled": true
+		}
+	]
 }
