--- a/TimeGlide.uproject
+++ b/TimeGlide.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{0004152A-08DA-92B2-4A3B-188A09AF6C3A}",
+	"EngineAssociation": "4.27",
 	"Category": "",
 	"Description": "",
 	"Plugins": [
